--- a/animation.css
+++ b/animation.css
@@ -1,38 +1,46 @@
-.aaa{
+.box{
     width: 500px;
     height: 400px;
-    background-color: rgb(83, 28, 83);
-    display: flex;
-    justify-content: flex-start;
+    background-color: rgb(20, 19, 20);
+   
     display: inline-block;
-    opacity: 1;
+    opacity: 0;
     transition: all ease 2s;
-    color: #f4f805;
+   
     font-size: x-large;
     text-align: center;
     box-shadow: 2px 2px rgb(18, 19, 18);
     
 }
-.aks{
+.overly{
     width: 500px;
     height: 400px;
-    display: inline-block;
+  
     transition: all ease 3s;
     opacity: 1;
-    
+     background-image: url(/winter-night.jpg);
 }
- .aks:hover{
+ .overly:hover{
     opacity: 0.5;
-    transform: scale(1.07);
+    transform: scale(1.02);
+   
  }
- .aaa:hover{
+ .box:hover{
     opacity: 0.8;
+    transform: scale(1.02);
     
  }
  span{
-color: #fc0303;
-    position: relative;{
-    top: -200px;
-    left: -130px;
+ color: #fc0303;
+    position: relative;
+    top: 150px;
+    left: 07px;
     overflow: hidden;
+    opacity: 1;
+ }
+ .span:hover{
+    opacity: 0;
+    color: #fc0303;
+   
+    
  }
