--- a/animation.css
+++ b/animation.css
@@ -1,46 +1,52 @@
 .box{
     width: 500px;
     height: 400px;
-    background-color: rgb(20, 19, 20);
-   
     display: inline-block;
-    opacity: 0;
-    transition: all ease 2s;
-   
-    font-size: x-large;
+    opacity: 1;
+    transition: all ease  4s 0.005s;
     text-align: center;
-    box-shadow: 2px 2px rgb(18, 19, 18);
+    background-image: url(/winter-night.jpg);
+
+    
     
 }
 .overly{
     width: 500px;
     height: 400px;
-  
-    transition: all ease 3s;
-    opacity: 1;
-     background-image: url(/winter-night.jpg);
+     transition: all ease .01s;
+    opacity: 0;
 }
  .overly:hover{
-    opacity: 0.5;
-    transform: scale(1.02);
+    opacity: 0.8;
+    text-align: center;
    
+ }
+
+ .box1{
+font-size: 70px;
+position: relative;
+top: 60px;
+left: 10px;
+ }
+ 
+
+ a{
+    text-decoration: none;
+    color: rgb(255, 2, 107);
+    opacity: 0.9;
+ }
+ a hover{
+    opacity:1;
+   
+   color: rgb(255, 0, 0);
+    text-align: center;
+    opacity: 1;
  }
  .box:hover{
     opacity: 0.8;
-    transform: scale(1.02);
-    
- }
- span{
- color: #fc0303;
-    position: relative;
-    top: 150px;
-    left: 07px;
-    overflow: hidden;
-    opacity: 1;
- }
- .span:hover{
-    opacity: 0;
-    color: #fc0303;
+    text-align: center;
+    background-color: black;
+    color: rgb(245, 5, 5);
    
-    
  }
+
